--- a/helloworld.conf
+++ b/helloworld.conf
@@ -1,12 +1,10 @@
-description "Hello world Daemon"
+description "Hello World Daemon"
 
 # Start when the system is ready to do networking.
-start on started elastic-network-interfaces
+start on runlevel [2345]
 
 # Stop when the system is on its way down.
 stop on shutdown
 
 respawn
-script
-    exec su --session-command="/usr/bin/node /home/ec2-user/helloworld.js" ec2-user
-end script
+exec /usr/bin/node /home/ec2-user/helloworld.js >> /home/ec2-user/app.log 2>&1
