--- a/helloworld.conf
+++ b/helloworld.conf
@@ -1,24 +1,10 @@
-#!/bin/bash
-# /etc/init.d/helloworld
-# A simple script to start/stop the Node.js application
+description "Hello World Daemon"
 
-case "$1" in
-    start)
-        echo "Starting HelloWorld"
-        su - ec2-user -c "nohup /usr/bin/node /home/ec2-user/helloworld.js > /home/ec2-user/app.log 2>&1 &"
-        ;;
-    stop)
-        echo "Stopping HelloWorld"
-        pkill -f "node /home/ec2-user/helloworld.js"
-        ;;
-    restart)
-        $0 stop
-        $0 start
-        ;;
-    *)
-        echo "Usage: /etc/init.d/helloworld {start|stop|restart}"
-        exit 1
-        ;;
-esac
+# Start when the system is ready to do networking.
+start on runlevel [2345]
 
-exit 0
+# Stop when the system is on its way down.
+stop on shutdown
+
+respawn
+exec /usr/bin/node /home/ec2-user/helloworld.js >> /home/ec2-user/app.log 2>&1
