--- a/helloworld.conf
+++ b/helloworld.conf
@@ -1,10 +1,15 @@
-description "Hello World Daemon"
+[Unit]
+Description=Hello World Node.js Application
+After=network.target
 
-# Start when the system is ready to do networking.
-start on runlevel [2345]
+[Service]
+ExecStart=/usr/bin/node /home/ec2-user/helloworld.js >> /home/ec2-user/app.log 2>&1
+Restart=always
+User=ec2-user
+WorkingDirectory=/home/ec2-user
+StandardOutput=syslog
+StandardError=syslog
+SyslogIdentifier=helloworld
 
-# Stop when the system is on its way down.
-stop on shutdown
-
-respawn
-exec /usr/bin/node /home/ec2-user/helloworld.js >> /home/ec2-user/app.log 2>&1
+[Install]
+WantedBy=multi-user.target
