--- a/helloworld.conf
+++ b/helloworld.conf
@@ -7,9 +7,7 @@ ExecStart=/usr/bin/node /home/ec2-user/helloworld.js >> /home/ec2-user/app.log 2
 Restart=always
 User=ec2-user
 WorkingDirectory=/home/ec2-user
-StandardOutput=syslog
-StandardError=syslog
-SyslogIdentifier=helloworld
 
 [Install]
 WantedBy=multi-user.target
+EOF
